      warnings into errors or handling them via \code{tryCatch} (\PR{17966},
      \PR{17780}).

      \item Datetime functions now restore even an empty \env{TZ}
      environment variable after internal time zone changes (\PR{17724}).
      This makes results of datetime functions with this (typically
      unintentional) setting more predictable.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.3.2 patched}{
  \subsection{BUG FIXES}{
    \itemize{
      \item Some invalid \code{file} arguments to \code{pictex()},
      \code{postscript()} and \code{xfig()} opened a file called
      \samp{NA} rather than throw an error.  These included
      \code{postscript(NULL)} (which some people expected to work like
      \code{pdf(NULL)}).

      \item Passing \code{filename = NA} to \code{svg()}, \code{cairo_pdf()},
      \code{cairo_ps()} or the Cairo-based bitmap devices opened a file
      called \samp{NA}: it now throws an error.

      \item \code{quartz(file = NA)} opened a file called \samp{NA}, including
      when used as a Quartz-based bitmap device.  It now gives an error.

      \item \code{rank(<long vector>)} now works, fixing \PR{18617}, thanks to
      Ilia Kats.

      \item \code{seq.int()} did not adequately check its
      \code{length.out} argument.

      \item \code{match(<POSIXct>, .)} is correct again for differing time
      zones, ditto for \code{"POSIXlt"}, fixing \PR{18618} reported by
      Bastian Klein.

      \item \code{drop.terms(*, dropx=<0-length>)} now works, fixing
      \PR{18563} as proposed by Mikael Jagan.

      \item \code{getS3method("t", "test")} no longer finds the
      \code{t.test()} function, fixing \PR{18627}.

      \item \code{pdf()} and \code{postscript()} support for the documented
      Adobe encodings \code{"Greek"} and \code{"Cyrilllic"} was missing
      (although the corresponding Windows' codepages could be used).
      (And also for the legacy \code{"MacRoman"} encoding.) 
